--- a/package.json
+++ b/package.json
@@ -7,16 +7,19 @@
   "author": "Your Name",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cookie-parser": "~1.4.4",
+    "csurf": "^1.11.0",
     "debug": "~2.6.9",
     "dotenv": "^17.2.2",
     "express": "~4.16.1",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.20.0",
     "morgan": "~1.9.1",
     "pg": "^8.16.3"
   },
   "devDependencies": {
-    "jest": "^29.0.2",
+    "jest": "^29.7.0",
     "nodemon": "^2.0.2"
   },
   "scripts": {
@@ -28,11 +31,3 @@
     "testEnvironment": "node"
   }
 }
-
-[{
-  "userName":"admin",
-  "password":"3dmP@ssw0rd",
-},{
-  "userName":"admin",
-  "password":"3dmP@ssw0rd",
-}]
