--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,7 @@ postgis-data/
 data/
 
 # testing
-./testing-data
+testing-data/
 # VSCode
 .vscode/
 
@@ -36,3 +36,7 @@ data/
 # Misc
 *.swp
 *.swo
+
+
+# reference folder
+reference/
