--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -22,21 +22,30 @@ services:
     image: mongo:noble
     container_name: mongodb
     restart: on-failure
+    # need to generate keyfile and mount it for replica set authentication
+    #(openssl rand -base64 756 > mongo-keyfile
+    # chmod 400 mongo-keyfile)
+    # command: ["mongod", "--replSet", "rs0", "--keyFile", "/data/keyfile"]
+
     volumes:
       - ./mongodb-data:/data/db # Bind the volume to a folder in your project
+      - ./mongo-init:/docker-entrypoint-initdb.d # Mount init scripts
+      # - ./mongo-keyfile:/data/keyfile:ro
     env_file:
       - .env
     environment:
       - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
       - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
       - MONGO_INITDB_DATABASE=${MONGO_INITDB_DATABASE}
-    # No ports exposed for MongoDB in production
+    ports:
+      - "27017:27017"
     networks:
       - backend_network
   # postgis-data:
   postgis:
     image: postgis/postgis:16-master
     container_name: postgis
+    platform: linux/amd64
     restart: on-failure
     env_file:
       - .env
@@ -44,9 +53,11 @@ services:
       - POSTGRES_DB=${POSTGRES_DB}
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-    # No ports exposed for PostGIS in production
+    ports:
+      - "5432:5432" # Only accessible from host
     volumes:
       - ./postgis-data:/var/lib/postgresql/data
+      - ./postgis-init:/docker-entrypoint-initdb.d # Mount init scripts
     networks:
       - backend_network
 
