--- a/package.json
+++ b/package.json
@@ -25,9 +25,6 @@
   "scripts": {
     "start": "NODE_ENV=production node ./server/bin/www",
     "dev": "NODE_ENV=development nodemon ./server/bin/www",
-    "test": "jest"
-  },
-  "jest": {
-    "testEnvironment": "node"
+    "test": "node --experimental-vm-modules node_modules/.bin/jest"
   }
 }
