--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -3,7 +3,7 @@ version: "3.9"
 services:
   web:
     build: ./
-    image: "indoor_app:latest"
+    image: "indoor_map:latest"
     container_name: web
     ports:
       - "80:3000"
