--- a/package.json
+++ b/package.json
@@ -16,15 +16,15 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.20.0",
     "morgan": "~1.9.1",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "nodemon": "^3.0.1"
   },
   "devDependencies": {
-    "jest": "^29.7.0",
-    "nodemon": "^2.0.2"
+    "jest": "^29.7.0"
   },
   "scripts": {
     "start": "NODE_ENV=production node ./server/bin/www",
-    "dev": "NODE_ENV=development nodemon ./server/bin/www",
+    "dev": "NODE_ENV=development npx nodemon ./server/bin/www",
     "test": "node --experimental-vm-modules node_modules/.bin/jest"
   }
 }
