--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -3,10 +3,13 @@ version: "3.9"
 services:
   web:
     build: ./
-    image: "indoor_map:latest"
+    image: "indoor_app:latest"
     container_name: web
-    ports:
-      - "80:3000"
+    restart: on-failure
+    expose:
+      - "3000"
+    volumes:
+      - ./testing-data:/usr/app/testing-data
     env_file:
       - .env
     environment:
@@ -17,6 +20,33 @@ services:
       - postgis
     networks:
       - backend_network
+
+  # NEW: Nginx reverse proxy
+  nginx:
+    image: nginx:alpine
+    container_name: nginx-proxy
+    restart: unless-stopped
+    ports:
+      - "80:80" # HTTP
+      - "443:443" # HTTPS (will use after getting certificates)
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/ssl:/etc/nginx/ssl:ro
+      - ./nginx/certbot-webroot:/var/www/certbot:ro
+    depends_on:
+      - web
+    networks:
+      - backend_network
+
+  # NEW: Certbot for SSL certificates
+  certbot:
+    image: certbot/certbot:latest
+    container_name: certbot
+    volumes:
+      - ./nginx/ssl:/etc/letsencrypt
+      - ./nginx/certbot-webroot:/var/www/certbot
+    # This will run once and exit - we'll run it manually
+    entrypoint: /bin/sh -c "trap exit TERM; while :; do sleep 12h & wait $${!}; certbot renew; done;"
 
   mongo:
     image: mongo:noble
@@ -45,7 +75,6 @@ services:
   postgis:
     image: postgis/postgis:16-master
     container_name: postgis
-    platform: linux/amd64
     restart: on-failure
     env_file:
       - .env
